--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "node server.dev.js",
     "demo-build": "npm run build && webpack -p --config webpack.pd.config.js",
     "build": "wasm-pack build && node ./wasm-opt.js",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "test-wsl": "export CHROME_BIN='/mnt/c/Program Files (x86)/Google/Chrome/Application/chrome.exe' && export TEMP='/mnt/c/temp' && karma start karma.config.js",
+    "test": "karma start karma.config.js"
   },
   "repository": {
     "type": "git",
@@ -36,9 +38,11 @@
   },
   "homepage": "https://github.com/dtysky/gl-matrix-wasm#readme",
   "devDependencies": {
+    "@types/gl-matrix": "^2.4.5",
     "@types/node": "^6.0.52",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
+    "@types/webassembly-js-api": "^0.0.2",
     "@wasm-tool/wasm-pack-plugin": "^0.1.6",
     "autoprefixer": "^7.2.4",
     "awesome-typescript-loader": "^5.2.1",
@@ -47,7 +51,13 @@
     "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^0.28.8",
     "es6-object-assign": "^1.1.0",
+    "gl-matrix": "^3.0.0",
     "html-webpack-plugin": "^3.1.0",
+    "karma": "^4.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-typescript": "^4.1.0",
+    "mocha": "^5.0.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^2.0.10",
     "postcss-smart-import": "^0.7.6",
@@ -64,7 +74,6 @@
     "typescript": "^3.1.0",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.0",
-    "@types/webassembly-js-api": "^0.0.2"
+    "webpack-dev-server": "^3.1.0"
   }
 }
