Update unit test framework

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "skipLibCheck": true
   },
   "include": [
-    "lib/**/*.ts",
+    "pkg/**/*.ts",
+    "spec/**/*.ts",
     "demo/**/*.tsx",
     "demo/**/*.ts"
   ]
