--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
   "homepage": "https://github.com/dtysky/gl-matrix-wasm#readme",
   "devDependencies": {
     "@types/gl-matrix": "^2.4.5",
+    "@types/mocha": "^5.2.7",
     "@types/node": "^6.0.52",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
-    "@types/webassembly-js-api": "^0.0.2",
     "@wasm-tool/wasm-pack-plugin": "^0.1.6",
     "autoprefixer": "^7.2.4",
     "awesome-typescript-loader": "^5.2.1",
@@ -56,7 +56,6 @@
     "karma": "^4.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
-    "karma-typescript": "^4.1.0",
     "mocha": "^5.0.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^2.0.10",
