--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,8 @@ edition = "2018"
 [lib]
 crate-type = ["cdylib"]
 
-[dependencies.wasm-bindgen]
-version = "0.2.45"
-features = [
-  "nightly"
-]
+[dependencies]
+wasm-bindgen = "0.2.45"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
